Fix lost seat and wrong size of blind badge

--- a/client/views/tables/table.less
+++ b/client/views/tables/table.less
@@ -87,6 +87,8 @@
     }
 
     .p-seat-info {
+        max-width: 70%;
+        
         .p-seat-name {
             font-size: 18px;
             overflow: hidden;
